frontend/Kurumsal_Btandrnd_UI/k8s/K8s-Ingress-Test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurumsal-btandrnd-web-ingress
  namespace: kurumsal
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: test-kurumsalbtandrnd.alisangroup.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: kurumsal-btandrnd-ui
                port:
                  number: 80
